falco.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: falco
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: falco
  namespace: falco
  labels:
    app: falco
spec:
  selector:
    matchLabels:
      app: falco
  template:
    metadata:
      labels:
        app: falco
    spec:
      serviceAccountName: falco
      hostPID: true
      hostIPC: true
      containers:
      - name: falco
        image: falcosecurity/falco
        securityContext:
          privileged: true
        volumeMounts:
        - name: host-root
          mountPath: /host
        - name: var-run
          mountPath: /var/run
        - name: var-lib-docker
          mountPath: /var/lib/docker
          readOnly: true
      volumes:
      - name: host-root
        hostPath:
          path: /
      - name: var-run
        hostPath:
          path: /var/run
      - name: var-lib-docker
        hostPath:
          path: /var/lib/docker
