policyTest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    other-label: value
spec:
  containers:
    - name: nginx
      image: nginx
